# event-log-parser-rs

./: .gitattributes  Cargo.toml  LICENSE  README.md
examples/get-statistic/: Cargo.toml
examples/get-statistic/src/: main.rs
examples/parse-events/: Cargo.toml
examples/parse-events/src/: main.rs
examples/parse-references/: Cargo.toml
examples/parse-references/src/: main.rs
parser/: Cargo.toml  README.md
parser/src/: events.rs  lib.rs  parser.rs  references.rs
parser/tests/: test_files.rs
test-log/: 1Cv8.lgf  20221212000000.lgp
tests/get-statistic/: Cargo.toml
tests/get-statistic/src/: main.rs
tests/parse-events/: Cargo.toml
tests/parse-events/src/: main.rs
tests/parse-references/: Cargo.toml
tests/parse-references/src/: main.rs
