[package]
name = "event-log-parser-1c"
version = "0.1.0"
edition = "2024"
description = "Event log parser for 1C:Enterprise"
license = "MIT"
categories = []
repository = "https://github.com/medigor/event-log-parser-rs/"
homepage = "https://github.com/medigor/event-log-parser-rs/"
keywords = ["1c-enterprise", "native-api", "addin"]
readme = "README.md"

[dependencies]
uuid = "1.1"
chrono = "0.4"
memchr = "2.5"

[features]
data-separation = []
